# probabilistic-pitcher-physics

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
data/processed/: skubal_2025.csv
docs/: data-policy.md  demo-script.md  deploy-streamlit-cloud.md  final-acceptance-checklist.md  implementation-plan.md  modeling-notes.md  presentation.md  project-spec.md  real-data-smoke-test.md  research-log.md  weather-feature-spike.md
docs/assets/: overnight_morning_report.md  real_demo_morning_report.md  real_demo_validation_report.json
research/: 01-model-improvement-research.md
scripts/: build_demo_artifacts.py  build_interactive_data.py  build_readme_visuals.py  build_real_fixtures.py  build_static_site.py  fetch_baseball_savant_pitcher_csv.py  fetch_open_meteo_weather.py  real_data_smoke_test.py  run_factorized_validation.py  run_full_real_data_pipeline.py  run_model_tournament.py  run_rolling_temporal_board.py  run_validation_board.py  run_weather_residual_validation.py  select_best_candidate.py  summarize_overnight_results.py
site/: data.json  index.html  report.html  vercel.json
tests/: test_build_demo_artifacts_real.py  test_candidates.py  test_conditional.py  test_export_real.py  test_factorized.py  test_features_real.py  test_fetch_baseball_savant_pitcher_csv.py  test_model_router.py  test_models_validation_real.py  test_readme_visuals.py  test_real_data_policy.py  test_rolling_validation.py  test_scaffold.py  test_tournament.py  test_validation_board.py  test_weather_real.py
(+120 files in other folders)
