[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pitcher-twin"
version = "0.1.0"
description = "Humanized pitch replication from public Statcast data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "scipy>=1.12",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "plotly>=5.20",
  "pillow>=10.3",
  "imageio>=2.34",
  "pyarrow>=15.0",
  "joblib>=1.3",
]

[project.optional-dependencies]
data = [
  "pybaseball>=2.2",
]
app = [
  "streamlit>=1.34",
]
dev = [
  "pytest>=8.0",
  "jupyterlab>=4.1",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
